# Gesture-Recognition

./: .gitignore  .gitmodules  CMakeLists.txt  GestureRecognitionLibrary.cpp  GestureRecognitionLibrary.h  README.md  Weekly outline.docx
Documentation/: Installation.dox  Overview.dox
asl_application/: asl.cpp
data/asl/: labels.csv  landmarks.csv
data/pptx/: labels.csv  landmarks.csv  map.csv
docs/: Overview.dox
external_library/: .bazelrc  BUILD.bazel  WORKSPACE
external_library/mediapipe_samples/mediapipe_sample/: BUILD
external_library/mediapipe_samples/sample/: BUILD  mediapipe_sample.cc
gesture_asl/: CMakeLists.txt  asl_application.cpp  asl_dataset.txt  asl_training.cpp  gesture_asl.cpp
gesture_asl/data/: asl_label_map.csv  asl_labels.csv  labels.csv  landmarks.csv  ppt_labels.csv  ppt_landmarks.csv  pptx_data_labels.csv  pptx_data_landmarks.csv  pptx_labels.csv  pptx_landmarks.csv
gesture_pptx/: CMakeLists.txt  gesture_pptx.cpp  gesture_training.cpp  ppt_data.txt  test.pptx  ~$test.pptx
mediapipe_samples/: bazel-bin  bazel-mediapipe_samples  bazel-out  bazel-testlogs  build_desktop_examples.sh
mediapipe_samples/mediapipe_sample/: BUILD
mediapipe_samples/sample/: BUILD  mediapipe_sample.cc
processing_data/: CMakeLists.txt  processing.cpp
processing_data/processing_cocodataset/: CMakeLists.txt  gesture_training.cpp  process_coco.cpp
samples/: client_example.cpp  demo_contours.cpp  demo_ptmodel.cpp  demo_yolo.cpp  opencv_version.cpp
src/: data_classes.hpp  false_positive_filter.cpp  false_positive_filter.h  main.cpp  mediapipe_client.cpp  mediapipe_client.hpp
src/classifier/: dtree.hpp  get_model.cpp  knn.cpp  knn.hpp  svm.hpp  train_knn_example.cpp
src/data_augmentation/: image_augmentation.cpp  image_augmentation.hpp  landmarks_2d.hpp
src/feature_extraction/: pipeline.hpp  stage.hpp  test.cpp
src/filter/: false_positive_filter.cpp  false_positive_filter.h
src/load_data/: base_loader.cpp  base_loader.hpp  dyn_gesture_loader.hpp  folder_loader.cpp  folder_loader.hpp  save_and_read.cpp
src/mediapipe_client/: mediapipe_client.cpp  mediapipe_client.hpp
