
SET(PROJECT_NAME Gesture-Recognition)
PROJECT($(PROJECT_NAME))

CMAKE_MINIMUM_REQUIRED (VERSION 3.12)
SET(CMAKE_CXX_STANDARD 20)
SET(CMAKE_BUILD_TYPE Release)

FIND_PACKAGE(OpenCV REQUIRED)
FIND_PACKAGE(mbedTLS REQUIRED)

SET(SOURCE_FILES
    samples/client_example.cpp
    # Add more source files as needed
)

INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
INCLUDE_DIRECTORIES(${MBEDTLS_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${YAML-CPP_INCLUDE_DIRS})

ADD_EXECUTABLE(gesture_project ${SOURCE_FILES})

TARGET_LINK_LIBRARIES(gesture_project ${OpenCV_LIBS})
TARGET_LINK_LIBRARIES(gesture_project ${MBEDTLS_LIBRARY})
TARGET_LINK_LIBRARIES(gesture_project ${YAML-CPP_LIBRARIES})

